--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,9 +3,9 @@
 </div>
 <div class="user-dropdown" *ngIf="!selectedUser">
     <span class="br"> </span>
-    <mat-select placeholder = "Select Character Here" [(ngModel)]="selectedUser" name = "user" >
-        <mat-option *ngFor="let user of users" [value]="user.character">
-            {{user.character}}
+    <mat-select placeholder = "Select Character Here" [(ngModel)]="selectedUser" name = "user" [displayWith]="displayProperty">
+        <mat-option *ngFor="let user of users" [value]="user">
+            {{user.character}} ({{user.player}})
         </mat-option>
     </mat-select>
 </div>
@@ -15,7 +15,7 @@
 </div>
 <div *ngIf="selectedUser" class="bigLobsterText">
     <span class="br"> </span>
-    {{selectedUser}}
+    {{selectedUser.character}} ({{selectedUser.player}})
 </div>
 <span class="br"> </span>
 <div *ngIf="selectedUser" class="user-label-small blue" (click)="switchUser()">
