--- a/src/app/item/item-transaction-modal/item-transaction-modal.component.html
+++ b/src/app/item/item-transaction-modal/item-transaction-modal.component.html
@@ -113,6 +113,17 @@
                     rows="10" required>
                     </textarea>
                 </mat-form-field><br>
+                
+                <mat-form-field appearance="fill" class="field">
+                    <mat-label>How Were These Item(s) Acquired</mat-label>
+                    <textarea
+                    matInput 
+                    class="textBox"  
+                    formControlName="origin" 
+                    cols="40" 
+                    rows="4" required>
+                    </textarea>
+                </mat-form-field><br>
 
                 <div>
                     <button mat-raised-button color="light-blue" matStepperPrevious>Back</button>&nbsp;&nbsp;
