--- a/src/app/item/item-container/item-container.component.html
+++ b/src/app/item/item-container/item-container.component.html
@@ -12,12 +12,14 @@
             <app-item-table [user]="user" [isForBank]=true></app-item-table>
         </div>
     </mat-tab>
-    <mat-tab label="My Items">
-        <br>
-        <div class="button-container">
-            <button mat-raised-button color="light-blue" (click)="openHistoryDialog()">Transaction History</button>
-        </div>
-        <br><span class="br"></span>
-        <app-item-table [user]="user" [isForBank]=false></app-item-table>
-    </mat-tab>
+    <div *ngFor="let player of players">
+        <mat-tab [label]="getPlayerBankLabel(player)">
+            <br>
+            <div class="button-container">
+                <button mat-raised-button color="light-blue" (click)="openHistoryDialog()">Transaction History</button>
+            </div>
+            <br><span class="br"></span>
+            <app-item-table [user]="player.character" [isForBank]=false></app-item-table>
+        </mat-tab>
+    </div>
 </mat-tab-group>
