--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,7 +3,10 @@
 </div>
 <div class="user-dropdown" *ngIf="!selectedUser">
     <span class="br"> </span>
-    <mat-select placeholder = "Select Character Here" [(ngModel)]="selectedUser" name = "user" [displayWith]="displayProperty">
+    <mat-select placeholder = "Select Character Here" 
+    [(ngModel)]="selectedUser" name = "user" 
+    [displayWith]="displayProperty"
+    (selectionChange)='setAssociatedPlayerCharacters($event.value)'>
         <mat-option *ngFor="let user of users" [value]="user">
             {{user.character}} ({{user.player}})
         </mat-option>
