--- a/src/app/item/item-container/item-container.component.html
+++ b/src/app/item/item-container/item-container.component.html
@@ -1,6 +1,6 @@
 <br>
 <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Party Item Bank">
+    <mat-tab label="Party Item Vault">
         <br>
         <div class="button-container">
             <button mat-raised-button color="light-blue" (click)="openDepositDialog()">Deposit Item</button>
@@ -19,7 +19,7 @@
                 <button mat-raised-button color="light-blue" (click)="openHistoryDialog()">Transaction History</button>
             </div>
             <br><span class="br"></span>
-            <app-item-table [user]="player.character" [isForBank]=false></app-item-table>
+            <app-item-table [user]="player" [isForBank]=false></app-item-table>
         </mat-tab>
     </div>
 </mat-tab-group>
