--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -18,7 +18,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
             <td mat-cell *matCellDef="let element">
                 <div (click)="openItemDescription(element)">
-                    <span [ngClass]="firestoreService.getRarity(element.rarity)">
+                    <span [ngClass]="itemService.getRarity(element.rarity)">
                         {{element.name | titlecase}}
                         <span *ngIf="element.duplicateItems.length > 0 || element.quantity > 1">({{getQuantity(element)}})</span>
                     </span>
@@ -66,7 +66,7 @@
                     mat-raised-button color="light-blue" 
                     matTooltip="Move Item(s) To Personal Bank"
                     [matTooltipShowDelay]="500"
-                    (click)="moveItem()">
+                    (click)="moveItem(element)">
                         <div class="center-icon">
                             <mat-icon>forward</mat-icon>
                         </div>
@@ -91,7 +91,6 @@
                 </div>
             </td>
         </ng-container>
-
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
