--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,13 @@ text-align: center;
    display: flex;
  }
 
+ 
+.center {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+
  .common {
    color: rgb(182, 182, 182);
 }
