wip item action modal, working but bugged

--- a/src/app/coin/money/money.component.html
+++ b/src/app/coin/money/money.component.html
@@ -4,23 +4,23 @@
             <br>
             <div class="money-text">
                 <img src="../../../assets/platinum.png" class="moneyIcon">
-                Platinum: &nbsp;
+                Platinum:
                 {{ currencyTransaction?.platinumTotal | number }} &nbsp;&nbsp;
                 <img src="../../../assets/electrum.png" class="moneyIcon">
-                Electrum: &nbsp;
+                Electrum:
                 {{ currencyTransaction?.electrumTotal | number }} &nbsp;&nbsp;
                 <img src="../../../assets/silver.png" class="moneyIcon">
-                Silver: &nbsp;
+                Silver:
                 {{ currencyTransaction?.silverTotal | number }} &nbsp;&nbsp;
                 <img src="../../../assets/copper.png" class="moneyIcon">
-                Copper: &nbsp;
+                Copper: 
                 {{ currencyTransaction?.copperTotal | number }} &nbsp;&nbsp;
                 <img src="../../../assets/gold.png" class="moneyIcon">
-                Gold: &nbsp;
+                Gold: 
                 {{ currencyTransaction?.goldTotal | number }} &nbsp;&nbsp;
                 <br>
                 <span class="br"></span>
-                Total Value in Silver: &nbsp;&nbsp;
+                Total Value in Silver: 
                 <img src="../../../assets/silver.png" class="moneyIcon">
                 {{ currencyTransaction?.totalValueInSilver | number:'1.2-2' }}
             </div>
