--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -83,7 +83,7 @@
                     mat-raised-button color="orange"
                     matTooltip="Discard Item(s) that are sold, consumed, stolen, etc..."
                     [matTooltipShowDelay]="500"
-                    (click)="deleteItem()">
+                    (click)="deleteItem(element)">
                         <div class="center-icon">
                             <mat-icon>delete_forever</mat-icon>
                         </div>
