--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
@@ -1,7 +1,7 @@
 .confirm-title{
     font-size: 30px;
     text-align: center;
-    font-weight: bolder;
+    font-family: 'Poppins', sans-serif;
 }
 
 .confirm-message{
