--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -64,7 +64,7 @@
                 <div class="button-container">
                     <button class="small-button" 
                     mat-raised-button color="light-blue" 
-                    matTooltip="Move Item(s) To Personal Bank"
+                    [matTooltip]="getTooltipLabel()"
                     [matTooltipShowDelay]="500"
                     (click)="moveItem(element)">
                         <div class="center-icon">
