--- a/src/app/coin/monetary-history/monetary-history.component.html
+++ b/src/app/coin/monetary-history/monetary-history.component.html
@@ -77,7 +77,7 @@
         </ng-container>
         
         <ng-container matColumnDef="createdBy">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Created By</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Transacted By</th>
             <td mat-cell *matCellDef="let element">{{element.createdBy}}</td>
         </ng-container>
         
@@ -95,7 +95,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[7, 15, 30]" showFirstLastButtons></mat-paginator>
     
     <br>
     
@@ -105,6 +105,6 @@
     class="centerButton" 
     (click)="closeDialog()">
     Close History Table
-</button>
+    </button>
 
 </mat-dialog-content>
