added ability to sell items, many refactors

--- a/src/app/item/item-action/item-action.component.html
+++ b/src/app/item/item-action/item-action.component.html
@@ -27,7 +27,7 @@
                 </div>
             </mat-form-field>
         </div>
-        <div *ngIf="data.user.role === 'dm'">
+        <div *ngIf="data.user.role === 'dm' && data.action === 'move'">
             <mat-form-field appearance="fill" class="field">
                 <mat-label>Vault To Move Item To</mat-label>
                 <mat-select placeholder="Select Player to Send Item" formControlName="destination" required>
