--- a/src/app/coin/monetary-history/monetary-history.component.html
+++ b/src/app/coin/monetary-history/monetary-history.component.html
@@ -88,7 +88,11 @@
         
         <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef>Reason For Transaction</th>
-            <td mat-cell *matCellDef="let element">{{element.description}}</td>
+            <td mat-cell *matCellDef="let element">
+                <span (click)="openItemDescription(element)">        
+                    {{element.description}}
+                </span>
+            </td>
         </ng-container>
         
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
