--- a/src/app/item/item-history/item-history.component.html
+++ b/src/app/item/item-history/item-history.component.html
@@ -56,9 +56,9 @@
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
             <div (click)="openItemDescription(element.itemId)">
-                <span [ngClass]="element.action">
+                <!-- <span [ngClass]="element.action"> -->
                     {{element.action | titlecase}}
-                </span>
+                <!-- </span> -->
             </div>
         </td>
     </ng-container>
