--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -58,12 +58,38 @@
             </td>
         </ng-container>
 
+        <ng-container matColumnDef="sell">
+            <th mat-header-cell *matHeaderCellDef>Sell</th>
+            <td mat-cell *matCellDef="let element">
+                <div class="button-container" *ngIf="element.cost">
+                    <button class="small-button" 
+                    mat-raised-button 
+                    color="pink"
+                    matTooltip="Sell Item(s) To Vendor"
+                    [matTooltipShowDelay]="500"
+                    (click)="sellItem(element)">
+                        <div class="center-icon">
+                            <mat-icon>attach_money</mat-icon>
+                        </div>
+                    </button>
+                </div>
+                <div class="button-container" *ngIf="!element.cost">
+                    <button class="small-button" mat-raised-button disabled="true">
+                        <div class="center-icon">
+                            <mat-icon>attach_money</mat-icon>
+                        </div>
+                    </button>
+                </div>
+            </td>
+        </ng-container>
+
         <ng-container matColumnDef="withdraw">
             <th mat-header-cell *matHeaderCellDef>Move</th>
             <td mat-cell *matCellDef="let element">
                 <div class="button-container">
                     <button class="small-button" 
-                    mat-raised-button color="light-blue" 
+                    mat-raised-button 
+                    color="light-blue" 
                     [matTooltip]="getTooltipLabel()"
                     [matTooltipShowDelay]="500"
                     (click)="moveItem(element)">
@@ -80,7 +106,8 @@
             <td mat-cell *matCellDef="let element">
                 <div class="button-container">
                     <button class="small-button" 
-                    mat-raised-button color="orange"
+                    mat-raised-button 
+                    color="orange"
                     matTooltip="Discard Item(s) that are sold, consumed, stolen, etc..."
                     [matTooltipShowDelay]="500"
                     (click)="deleteItem(element)">
