--- a/src/app/item/item-history/item-history.component.html
+++ b/src/app/item/item-history/item-history.component.html
@@ -52,28 +52,35 @@
         </td>
     </ng-container>
 
-    <ng-container matColumnDef="action">
+    <!-- <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
             <div (click)="openItemDescription(element.itemId)">
-                <!-- <span [ngClass]="element.action"> -->
+                <span [ngClass]="element.action">
                     {{element.action | titlecase}}
-                <!-- </span> -->
+                </span>
             </div>
         </td>
-    </ng-container>
+    </ng-container> -->
     
     <ng-container matColumnDef="history">
-        <th mat-header-cell *matHeaderCellDef>Change</th>
+        <th mat-header-cell *matHeaderCellDef>
+            Change
+            <br>
+            (before >>> after)
+        </th>
         <td mat-cell *matCellDef="let element">
-            <div (click)="openItemDescription(element.itemId)">
+            <div (click)="openItemDescription(element, true)" style="white-space: pre;">
                 <div *ngIf="showGrid(element)">
-                    <mat-grid-list cols="5" rowHeight=35px>
+                    <mat-grid-list cols="5" rowHeight=60px>
                         <mat-grid-tile [colspan]=2>
                             {{getBeforeAction(element) | titlecase}}
                         </mat-grid-tile>
                         <mat-grid-tile [colspan]=1>
-                            <img src="../../../assets/arrow.png" class="moneyIcon">
+                            <div [ngClass]="element.action">
+                                {{element.action | titlecase}}
+                            </div>
+                            <img [src]='"../../../assets/"+getArrowIcon(element)+".png"' class="moneyIcon">
                         </mat-grid-tile>
                         <mat-grid-tile [colspan]=2>
                             {{getAfterAction(element) | titlecase}}
@@ -81,7 +88,7 @@
                     </mat-grid-list>
                 </div>
                 <div *ngIf="showParagraph(element)">
-                    {{element.origin}}
+                    {{getOrigin(element)}}
                 </div>
             </div>
         </td>
