--- a/src/app/item/item-action/item-action.component.html
+++ b/src/app/item/item-action/item-action.component.html
@@ -11,7 +11,7 @@
             <mat-form-field appearance="fill" class="field">
                 <mat-label>Vault To Move Item To</mat-label>
                 <mat-select placeholder="Select Player to Send Item" formControlName="destination" required>
-                    <mat-option *ngFor="let player of players" [value]="player.character">
+                    <mat-option *ngFor="let player of players" [value]="player.short">
                         {{getPlayerOptionLabel(player)}}
                     </mat-option>
                 </mat-select>
