--- a/src/app/item/item-history/item-history.component.html
+++ b/src/app/item/item-history/item-history.component.html
@@ -10,7 +10,7 @@
     <span class="br"></span>
     <br>
 
-    <!-- <mat-grid-list cols="2" rowHeight="70px">
+    <mat-grid-list cols="2" rowHeight="70px">
         <mat-grid-tile>
             <div class="grid-left">
                 <mat-form-field #pickerForm appearance="fill" class="form">
@@ -33,7 +33,7 @@
                 </button>
             </div>
         </mat-grid-tile>
-      </mat-grid-list> -->
+      </mat-grid-list>
     
     <table 
     mat-table 
@@ -44,24 +44,16 @@
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
         <td mat-cell *matCellDef="let element">
-            <div (click)="openItemDescription(element.itemId)">
+            <div (click)="openItemDescription(element)">
                 <span [ngClass]="itemService.getRarity(element.itemRarity)">
                     {{element.itemName | titlecase}}
                 </span>
+                <div class="small-text">
+                    Item Id: {{element.itemId}}
+                </div>
             </div>
         </td>
     </ng-container>
-
-    <!-- <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">
-            <div (click)="openItemDescription(element.itemId)">
-                <span [ngClass]="element.action">
-                    {{element.action | titlecase}}
-                </span>
-            </div>
-        </td>
-    </ng-container> -->
     
     <ng-container matColumnDef="history">
         <th mat-header-cell *matHeaderCellDef>
@@ -71,15 +63,15 @@
         </th>
         <td mat-cell *matCellDef="let element">
             <div (click)="openItemDescription(element, true)" style="white-space: pre;">
+                <div [ngClass]="element.action">
+                    {{element.action | titlecase}}
+                </div>
                 <div *ngIf="showGrid(element)">
-                    <mat-grid-list cols="5" rowHeight=60px>
+                    <mat-grid-list cols="5" rowHeight=30px>
                         <mat-grid-tile [colspan]=2>
                             {{getBeforeAction(element) | titlecase}}
                         </mat-grid-tile>
                         <mat-grid-tile [colspan]=1>
-                            <div [ngClass]="element.action">
-                                {{element.action | titlecase}}
-                            </div>
                             <img [src]='"../../../assets/"+getArrowIcon(element)+".png"' class="moneyIcon">
                         </mat-grid-tile>
                         <mat-grid-tile [colspan]=2>
@@ -97,7 +89,7 @@
     <ng-container matColumnDef="createdBy">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Transacted By</th>
         <td mat-cell *matCellDef="let element">
-            <div (click)="openItemDescription(element.itemId)">
+            <div (click)="openItemDescription(element)">
                 {{element.createdBy}}
             </div>
         </td>
@@ -106,7 +98,7 @@
     <ng-container matColumnDef="createdOn">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Transacted On</th>
         <td mat-cell *matCellDef="let element">
-            <div (click)="openItemDescription(element.itemId)">
+            <div (click)="openItemDescription(element)">
                 {{getTransactionDate(element.createdOn)}}
             </div>
         </td>
