--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,11 @@ body {  margin: 0;
    margin: 16px 0;
 }
 
+.br-small {
+   display: block;
+   margin: 4px 0;
+}
+
 .moneyIcon{
 height: 20px;
 margin-left: 7px;
@@ -108,6 +113,13 @@ text-align: center;
 
 .artifact {
    color: peru;
+}
+
+.tall-button {
+   height: 52px;
+   width: 202px;
+   margin-bottom: 1rem;
+   align-items: center;
 }
 
 /* MAT TAB STYLING */
