--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -84,3 +84,9 @@ margin-left: 7px;
     justify-content: center;
     text-align: center;
 }
+
+.mat-badge-content {
+    background:  #4699c7;
+    font-size: 10px;
+    font-weight: lighter;
+}
