--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -67,8 +67,7 @@ transform: translateY(0px) !important;
 }
 
 .item-icon {
-    height: 30px;
-margin-left: 7px;
+    transform: scale(1.45);
     vertical-align: middle
 }
 
