--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -9,14 +9,14 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <div *ngIf="!isNewItem(element.lastUpdatedOn)" (click)="openItemDescription(element)">
-                    <img [src]='"../../../assets/"+getItemIcon(element.type)+".jpg"' class="item-icon">
+                    <mat-icon [svgIcon]="itemService.getItemIcon(element.type)" class="item-icon"></mat-icon>
                 </div>
                 <div *ngIf="isNewItem(element.lastUpdatedOn)"
                 (click)="openItemDescription(element)" 
                 matBadge="new" 
                 matBadgePosition="before" 
                 matBadgeOverlap="true">
-                    <img [src]='"../../../assets/"+getItemIcon(element.type)+".jpg"' class="item-icon">
+                    <mat-icon [svgIcon]="itemService.getItemIcon(element.type)" class="item-icon"></mat-icon>
                 </div>
             </td>
         </ng-container>
