fixed dm table sizing issue

--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -22,15 +22,16 @@
 .money-card{
     margin: auto;
     width: fit-content;
-    min-width: var(--moneyWidth);
+    /* min-width: var(--moneyWidth); */
     background-color: #424242;
     border: 5px solid #000;
+    max-width: 80%;
 }
 
 .item-card{
     margin: auto;
-    width: fit-content;
-    min-width: var(--itemWidth);
+    /* width: fit-content; */
+    width: var(--itemWidth);
     background-color: #424242;
     border: 5px solid #000;
     max-width: 80%;
