--- a/src/app/item/item-table/item-table.component.css
+++ b/src/app/item/item-table/item-table.component.css
@@ -84,8 +84,10 @@ transform: translateY(0px) !important;
     text-align: center;
 }
 
+
+/* 
 .mat-badge-content {
     background:  #4699c7;
     font-size: 10px;
     font-weight: lighter;
-}
+} */
