--- a/src/app/coin/monetary-history/monetary-history.component.html
+++ b/src/app/coin/monetary-history/monetary-history.component.html
@@ -40,7 +40,15 @@
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Transaction Type</th>
             <td mat-cell *matCellDef="let element">
-                <div [ngClass]="{'orange': element.type === 'Withdraw', 'light-blue': element.type === 'Deposit'}">
+                <div *ngIf="userService.isNew(element.createdOn, data.user)" 
+                [ngClass]="{'orange': element.type === 'Withdraw', 'light-blue': element.type === 'Deposit'}"
+                matBadge="new" 
+                matBadgePosition="before" 
+                matBadgeOverlap="false">
+                    {{element.type}}
+                </div>
+                <div *ngIf="!userService.isNew(element.createdOn, data.user)" 
+                [ngClass]="{'orange': element.type === 'Withdraw', 'light-blue': element.type === 'Deposit'}">
                     {{element.type}}
                 </div>
             </td>
