--- a/src/app/item/item-table/item-table.component.html
+++ b/src/app/item/item-table/item-table.component.html
@@ -8,10 +8,10 @@
         <ng-container matColumnDef="icon">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-                <div *ngIf="!isNewItem(element.lastUpdatedOn)" (click)="openItemDescription(element)">
+                <div *ngIf="!userService.isNew(element.lastUpdatedOn, user)" (click)="openItemDescription(element)">
                     <mat-icon [svgIcon]="itemService.getItemIcon(element.type)" class="item-icon"></mat-icon>
                 </div>
-                <div *ngIf="isNewItem(element.lastUpdatedOn)"
+                <div *ngIf="userService.isNew(element.lastUpdatedOn, user)"
                 (click)="openItemDescription(element)" 
                 matBadge="new" 
                 matBadgePosition="before" 
