--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,12 @@ text-align: center;
    background-color:#4699c7;
  }
  
+ /* MAT BADGE STYLING */
+.mat-badge-content {
+   background:  #4699c7;
+   font-size: 10px;
+   font-weight: lighter;
+}
 
  /* REMOVE ARROWS FROM NUMBER INPUT */
 /* Chrome, Safari, Edge, Opera */
