rounded corners of coin and item banks, bug fix for monetary history calling item history

--- a/src/app/bag-parent/bag-parent.component.css
+++ b/src/app/bag-parent/bag-parent.component.css
@@ -25,6 +25,7 @@
     background-color: #424242;
     border: 5px solid #000;
     max-width: 80%;
+    border-radius: 30px;
 }
 
 .item-card{
@@ -33,6 +34,7 @@
     background-color: #424242;
     border: 5px solid #000;
     max-width: 80%;
+    border-radius: 30px;
 }
 
 
