bug fix, wip adding sign in infrastructure

--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.css
@@ -9,6 +9,9 @@
 }
 
 .confirm-message-center{
-    
     font-size: 15px;
+}
+
+::ng-deep .mat-dialog-container {
+    max-height: 90vh !important;
 }
