--- a/src/styles.css
+++ b/src/styles.css
@@ -156,6 +156,12 @@ text-align: center;
    font-weight: lighter;
 }
 
+/* MAT DIALOG STYLING */
+.mat-dialog-container {
+   max-height: 90vh !important;
+}
+
+
  /* REMOVE ARROWS FROM NUMBER INPUT */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
