--- a/src/app/coin/monetary-history/monetary-history.component.html
+++ b/src/app/coin/monetary-history/monetary-history.component.html
@@ -41,14 +41,14 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Transaction Type</th>
             <td mat-cell *matCellDef="let element">
                 <div *ngIf="userService.isNew(element.createdOn, data.user)" 
-                [ngClass]="{'orange': element.type === 'Withdraw', 'light-blue': element.type === 'Deposit'}"
+                [ngClass]="{'orange-bold': element.type === 'Withdraw', 'light-blue-bold': element.type === 'Deposit'}"
                 matBadge="new" 
                 matBadgePosition="before" 
                 matBadgeOverlap="false">
                     {{element.type}}
                 </div>
                 <div *ngIf="!userService.isNew(element.createdOn, data.user)" 
-                [ngClass]="{'orange': element.type === 'Withdraw', 'light-blue': element.type === 'Deposit'}">
+                [ngClass]="{'orange-bold': element.type === 'Withdraw', 'light-blue-bold': element.type === 'Deposit'}">
                     {{element.type}}
                 </div>
             </td>
